--- a/src/content/main/en/main.yaml
+++ b/src/content/main/en/main.yaml
@@ -177,13 +177,11 @@ portfolio:
           link: https://mrtoxas.github.io/cassette-tape-css/
       imgKey: cassette-type
     - name: Svitlo
-      description: PWA App. Parsing data and user-friendly displaying the planned blackout schedules of a particular city.
-      techList: [Astro, React, TypeScript, Prisma, Tailwind, shadcn]
+      description: PWA App. Parsing data and user-friendly displaying the planned blackout schedules of a particular city. Implemented a zero-cost architecture using free cloud services and query optimization through local caching.
+      techList: [Astro, React, TypeScript, Prisma, Tailwind, shadcn, Vercel, Supabase, Google Gemini]
       links:
         - name: Demo
           link: https://svitlo.vercel.app
-        - name: Telegram Web App
-          link: https://t.me/che_svitlo_bot
       imgKey: svitlo
     - name: Shmot-shopy
       description: Platform for creating online stores on subdomains, with a common administrative panel for each user, with the ability to create, modify, clone and otherwise manage sub-sites
@@ -200,3 +198,10 @@ portfolio:
           link: https://github.com/mrtoxas/cv
         - name: Demo
           link: https://mrtoxas.github.io/cv/
+    - name: Telegram bot Svitlo
+      description: A bot to display the PWA site as a Telegram Web-App, providing easy access to the site, storing user data in a database and event alerts.
+      techList: [grammY, Supabase Functions, Telegram API]
+      links:
+        - name: Demo
+          link: https://t.me/SvitloCheBot
+      imgKey: svitlobot
