--- a/src/content/main/ua/main.yaml
+++ b/src/content/main/ua/main.yaml
@@ -177,13 +177,11 @@ portfolio:
           link: https://mrtoxas.github.io/cassette-tape-css/
       imgKey: cassette-type
     - name: Svitlo
-      description: Додаток PWA. Парсинг даних та зручне відображення запланованих графіків відключень електроенергії в місті.
-      techList: [Astro, React, TypeScript, Prisma, Tailwind, shadcn]
+      description: Додаток PWA. Парсинг даних та зручне відображення запланованих графіків відключень електроенергії в місті. Реалізовано архітектуру з нульовою вартістю, що використовує безплатні хмарні сервіси і оптимізацію запитів через локальне кешування.
+      techList: [Astro, React, TypeScript, Prisma, Tailwind, shadcn, Vercel, Supabase, Google Gemini]
       links:
         - name: Demo
           link: https://svitlo.vercel.app
-        - name: Telegram Web App
-          link: https://t.me/che_svitlo_bot
       imgKey: svitlo
     - name: Shmot-shopy
       description: Платформа для створення інтернет-магазинів на піддоменах, зі спільною адміністративною панеллю для кожного користувача, з можливістю створювати, змінювати, клонувати та іншим чином керувати підсайтами.
@@ -200,3 +198,10 @@ portfolio:
           link: https://github.com/mrtoxas/cv
         - name: Demo
           link: https://mrtoxas.github.io/cv/
+    - name: Телеграм-бот Svitlo
+      description: Бот для відображення PWA-сайту як Telegram Web-App, що надає зручний доступ до сайту, зберігання даних користувачів у базі та сповіщення про події.
+      techList: [grammY, Supabase Functions, Telegram API]
+      links:
+        - name: Demo
+          link: https://t.me/SvitloCheBot
+      imgKey: svitlobot
