--- a/src/content/main/en/main.yaml
+++ b/src/content/main/en/main.yaml
@@ -86,9 +86,9 @@ education:
 works:
   title: Work experience
   list:
-    - name: FREELANCE, PERSONAL PROJECTS
+    - name: FREELANCE, PET PROJECTS
       subtitle: Web developer
-      years: 2022-2024
+      years: 2022-2025
       features:
         - Working with regular clients. Development of full-stack solutions for small businesses.
       skills:
