--- a/src/content/main/ru/main.yaml
+++ b/src/content/main/ru/main.yaml
@@ -4,7 +4,7 @@ hero:
 
 about:
   title: Обо мне
-  summary: Фронтенд-разработчик с опытом создания веб-приложений. Владею различными инструментами и методиками разработки. Уделяю внимание проектированию и оптимизации проектов, стремясь к идеальным макетам и чистому коду. В свободное время я изучаю новые технологии, читаю книги и статьи, чтобы расширить свои знания и навыки.
+  summary: Фронтенд-разработчик с опытом создания веб-приложений. Владею различными инструментами и методиками разработки. Уделяю внимание проектированию и оптимизации проектов, стремясь к идеальным макетам и чистому коду. В свободное время я изучаю новые технологии, читаю литературу, документации и статьи, чтобы расширить свои знания и навыки.
 
 contacts:
   ariaLabel: Contacts section
@@ -86,9 +86,9 @@ education:
 works:
   title: Опыт работы
   list:
-    - name: ФРИЛАНС
+    - name: ФРИЛАНС, ПЕТ-ПРОЕКТЫ
       subtitle: Веб-разработчик
-      years: 2022-2024
+      years: 2022-2025
       features:
         - Работа с постоянными клиентами. Разработка full-stack решений для малого бизнеса.
       skills:
