--- a/src/content/main/ua/main.yaml
+++ b/src/content/main/ua/main.yaml
@@ -4,7 +4,7 @@ hero:
 
 about:
   title: Про мене
-  summary: Фронтенд-розробник із досвідом створення веб-додатків. Володію різними інструментами та методиками розробки. Приділяю увагу проєктуванню та оптимізації проєктів, прагнучи до ідеальних макетів і чистого коду. У вільний час вивчаю нові технології, читаю книжки та статті, щоб розширити свої знання та навички.
+  summary: Фронтенд-розробник із досвідом створення веб-додатків. Володію різними інструментами та методиками розробки. Приділяю увагу проєктуванню та оптимізації проєктів, прагнучи до ідеальних макетів і чистого коду. У вільний час вивчаю нові технології, читаю літературу, документації та статті, щоб розширити свої знання та навички.
 
 contacts:
   ariaLabel: Contacts section
@@ -86,9 +86,9 @@ education:
 works:
   title: Досвід роботи
   list:
-    - name: ФРІЛАНС
+    - name: ФРІЛАНС, ПЕТ-ПРОЕКТИ
       subtitle: Веб-розробник
-      years: 2022-2024
+      years: 2022-2025
       features:
         - Робота з постійними клієнтами. Розробка full-stack рішень для малого бізнесу.
       skills:
