--- a/src/content/main/ru/main.yaml
+++ b/src/content/main/ru/main.yaml
@@ -158,6 +158,13 @@ footer:
 portfolio:
   title: Примеры работ
   list:
+    - name: Сайт-визитка и блог адвоката
+      description: Лендинг и блог для адвоката, разработанные с нуля на Astro с использованием статической генерации. Блог реализован через Keystatic с админ-панелью, поддерживает поиск, пагинацию, категории и теги. Работа с SEO, OpenGraph, JSON-LD, оптимизация загрузки, интеграция с Google Search Console. Проект развернут на Cloudflare с использованием Cloudflare Workers. Учтены требования доступности (ARIA) и адаптивность.
+      techList: [Astro, SSG, Keystatic, TypeScript, UnoCSS, Cloudflare Workers]
+      links:
+        - name: sukhomlyn.kyiv.ua
+          link: https://sukhomlyn.kyiv.ua
+      imgKey: sukhomlyn
     - name: Parcel static
       description: Консольный конструктор проектов для создания статических сайтов на базе Parcel. Создает среду разработки и предлагает выбор между различными технологиями разработки.
       techList: [Node.js, esbuild, TypeScript]
@@ -198,6 +205,7 @@ portfolio:
           link: https://github.com/mrtoxas/cv
         - name: Demo
           link: https://mrtoxas.github.io/cv/
+      imgKey: this
     - name: Телеграм-бот Svitlo
       description: Бот для отображения PWA-сайта как Telegram Web-App, предоставляющий удобный доступ к сайту, хранение данных пользователей в базе и оповещения о событиях.
       techList: [grammY, Supabase Functions, Telegram API]
