--- a/src/content/main/ru/main.yaml
+++ b/src/content/main/ru/main.yaml
@@ -4,7 +4,7 @@ hero:
 
 about:
   title: Обо мне
-  summary: Фронтенд-разработчик с опытом создания веб-приложений. Владею различными инструментами и методиками разработки. Уделяю внимание проектированию и оптимизации проектов, стремясь к идеальным макетам и чистому коду. В свободное время я изучаю новые технологии, читаю литературу, документации и статьи, чтобы расширить свои знания и навыки.
+  summary: Фронтенд-разработчик с опытом создания веб-приложений. Владею различными инструментами и методиками разработки. Уделяю внимание качественной реализации дизайна, оптимизации производительности и написанию чистого, поддерживаемого кода. Постоянно изучаю современные технологии и слежу за тенденциями индустрии.
 
 contacts:
   ariaLabel: Contacts section
@@ -76,12 +76,6 @@ education:
       features:
         - Компьютерная инженерия, компьютерные системы и сети
         - Курсы по web-программированию (JavaScript, Ruby on Rails, Python), участие в факультативных занятиях, предоставленных университетом во время обучения
-    - name: ЧЕРКАССКИЙ ГОСУДАРСТВЕННЫЙ БИЗНЕС-КОЛЛЕДЖ
-      years: 1998-2002
-      subtitle: Младший специалист
-      features:
-        - Обслуживание компьютерных и интеллектуальных систем и сетей
-        - В ходе учебной программы осуществлялось изучение языков программирования Assembler и Delphi
 
 works:
   title: Опыт работы
@@ -219,4 +213,6 @@ portfolio:
       links:
         - name: Demo
           link: https://portal-calc.web.app/
+        - name: GitHub
+          link: https://github.com/mrtoxas/portal-calc
       imgKey: portal-calc
