--- a/src/content/main/ua/main.yaml
+++ b/src/content/main/ua/main.yaml
@@ -4,7 +4,7 @@ hero:
 
 about:
   title: Про мене
-  summary: Фронтенд-розробник із досвідом створення веб-додатків. Володію різними інструментами та методиками розробки. Приділяю увагу проєктуванню та оптимізації проєктів, прагнучи до ідеальних макетів і чистого коду. У вільний час вивчаю нові технології, читаю літературу, документації та статті, щоб розширити свої знання та навички.
+  summary: Фронтенд-розробник із досвідом створення веб-додатків. Володію різними інструментами та методиками розробки. Приділяю увагу якісній реалізації дизайну, оптимізації продуктивності та написанню чистого, підтримуваного коду. Постійно вивчаю сучасні технології та стежу за тенденціями індустрії.
 
 contacts:
   ariaLabel: Contacts section
@@ -76,12 +76,6 @@ education:
       features:
         - Комп'ютерна інженерія, комп'ютерні системи та мережі
         - Курси з web-програмування (JavaScript, Ruby on Rails, Python), участь у факультативних заняттях, наданих університетом під час навчання
-    - name: ЧЕРКАСЬКИЙ ДЕРЖАВНИЙ БІЗНЕС-КОЛЕДЖ
-      years: 1998-2002
-      subtitle: Молодший спеціаліст
-      features:
-        - Обслуговування комп'ютерних та інтелектуальних систем та мереж
-        - Під час навчальної програми здійснювалося вивчення мов програмування Assembler і Delphi
 
 works:
   title: Досвід роботи
@@ -219,4 +213,6 @@ portfolio:
       links:
         - name: Demo
           link: https://portal-calc.web.app/
+        - name: GitHub
+          link: https://github.com/mrtoxas/portal-calc
       imgKey: portal-calc
